<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ContentDescription"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flowers"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            android:translationY="48dp"
            android:alpha=".8"
            android:id="@+id/flowers_top"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flower"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:alpha=".5"
            android:id="@+id/flowers_bottom" />

        <TextView
            android:id="@+id/header_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/poppins"
            android:text="@string/welcome_back"
            android:textAppearance="?textAppearanceHeadline4"
            android:textColor="@color/pink"
            app:layout_constraintBottom_toBottomOf="@id/flowers_top"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/flowers_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                android:clipToPadding="false"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/unique_id"
                    app:boxStrokeWidth="1dp"
                    app:boxBackgroundMode="filled"
                    android:id="@+id/unique_id_wrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:inputType="text"
                        android:lines="1"
                        android:id="@+id/unique_id"
                        android:paddingTop="24dp"
                        android:background="@android:color/transparent"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/code"
                    app:boxStrokeWidth="1dp"
                    app:boxBackgroundMode="filled"
                    android:layout_marginTop="32dp"
                    android:id="@+id/code_wrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:paddingTop="24dp"
                        android:id="@+id/code"
                        android:inputType="numberPassword"
                        android:background="@android:color/transparent"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:id="@+id/sign_in_button"
                    android:textAppearance="?textAppearanceBody1"
                    android:paddingVertical="16dp"
                    app:cornerRadius="50dp"
                    />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="24dp"
                    android:id="@+id/navigate_to_sign_up"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_account"
                        android:includeFontPadding="false"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textColor="@color/pink"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginStart="4dp"
                        android:includeFontPadding="false"
                        />


                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>